2002-09-29  Larry Ewing  <lewing@ximian.com>

	* rsvg.c (rsvg_start_ellipse): correct the ellipse rendering
	coordinates.

2002-09-27  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Add some news about 2.1.0

2002-09-27  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Bump version to 2.1.0

2002-09-25  jacob berkman  <jacob@ximian.com>

	* gtk-engine/Makefile.am: add $(top_srcdir) to $INCLUDES, remove
	broken and non-portable dist-hook in favor of real SUBDIRS (which
	only get built if the engine is enabled)

	* gtk-engine/ChangeLog: rename to ChangeLog-old

	* configure.in (AC_OUTPUT): add new Makefiles

2002-09-25  Dom Lachowicz <doml@appligent.com>

	* (configure.in): --enable-gtk-theme argument (default=yes)
	
2002-09-25  Dom Lachowicz <doml@appligent.com>

	* (): Import and create a SVG based GTK+ theme engine

2002-09-22  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (clip_rgb_percent): fix bug. stoopid math...

2002-09-19  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_ellipse): Ellipses work ok
	(rsvg_start_tspan): Start of tspan work. Needs to handle x offset
	
2002-09-18  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_color_parse) : use bsearch instead of GHashTable. Potentially faster, 
	you don't leak GHashTable, no need to alloc and free 2 GStrings, and it *actually works here*

2002-09-17  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_text_handler_characters): Handle scaling font by affine/viewbox
	(rsvg_start_rect): Correct for bug in border drawing around a rect
	
2002-09-17  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_svg): Parse viewbox as floats, not ints.
	(rsvg_start_text): Handle x & y attributes. TODO: dx,dy
	
2002-09-16  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_svg): Support the viewbox
	
2002-09-15  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (): Use g_ascii_strtod instead of atof, strtod, g_strtod
	* rsvg-css.c (): ditto
	