@@ -1,3 +1,10 @@
+2002-10-01  Dom Lachowicz <doml@appligent.com>
+
+	* rsvg.c (): Make drawing functions handle % widths, heights too
+	Use parse_normalized_length for font sizes as well
+	
+	* rsvg-css.[ch] (rsvg_css_parse_fontsize): kill function
+	
 2002-09-29  Larry Ewing  <lewing@ximian.com>
 
 	* rsvg.c (rsvg_start_ellipse): correct the ellipse rendering
